# DOCTORS

./: CMakeCache.txt  CMakeLists.txt  DOCTORS  LICENSE  Makefile  README.md  cmake_install.cmake
data/: H_N_O_Ar_100keV_90gp2.dtfr  ninetygroup.spec
include/: ctdatamanager.h  detector.h  detector_gpu.cuh  detector_metadata.h  detector_metadata_extract.h  device_utils.cuh  dtfrparser.h  histogram.h  legendre.h  legendre_gpu.cuh  macros.h  materialutils.h  mcnpwriter.h  mesh.h  nuclidedata.h  outwriter.h  quadrature.h  solver.h  solver_gpu.cuh  solver_metadata.h  solver_metadata_extract.h  sourceparams.h  sweep.h  xsection.h
src/: ctdatamanager.cpp  device_utils.cu  dtfrparser.cpp  histogram.cpp  legendre.cpp  main.cpp  materialutils.cpp  mcnpwriter.cpp  mesh.cpp  nuclidedata.cpp  outwriter.cpp  quadrature.cpp  solver.cpp  solver_gpu.cu  solver_metadata_extract.cpp  sourceparams.cpp  sweep.cpp  xsection.cpp
ui/: DOCTORS  DoctorsUserManual.docx  doctors_main.py  mainwindow_ui.py
utilities/: read_DOCTORS_output.py
